# protobuf/passwordservice.swagger.json
@@ -104,11 +104,14 @@
         "logins": {
           "type": "array",
           "items": {
-            "$ref": "#/definitions/protobufLocation"
+            "$ref": "#/definitions/protobufLogin"
           }
         },
         "user": {
           "$ref": "#/definitions/protobufUser"
+        },
+        "challenge": {
+          "type": "string"
         }
       }
     },
@@ -156,6 +159,19 @@
           "format": "float"
         }
       }
+    },
+    "protobufLogin": {
+      "type": "object",
+      "properties": {
+        "timestamp": {
+          "type": "string",
+          "format": "int64"
+        },
+        "location": {
+          "$ref": "#/definitions/protobufLocation"
+        }
+      },
+      "title": "login information fetched from IP stack"
     },
     "protobufUser": {
       "type": "object",
